--- a/core/composer.json
+++ b/core/composer.json
@@ -8,19 +8,18 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.1",
+        "php": "^8.1",
         "ext-curl": "*",
         "ext-json": "*",
         "academe/omnipay-authorizenetapi": " ~3.0",
         "anandsiddharth/laravel-paytm-wallet": "^1.0",
         "anhskohbo/no-captcha": "^3.1",
         "barryvdh/laravel-dompdf": "^1.0.0",
-        "caouecs/laravel-lang": "~7.0",
         "cartalyst/stripe-laravel": "13.*",
         "doctrine/dbal": "^3.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "7.4.*",
         "instamojo/instamojo-php": "^0.4.0",
         "laravel-notification-channels/webpush": "^5.1",
         "laravel/framework": "^8.40",
