--- a/script/.env
+++ b/script/.env
@@ -2,10 +2,10 @@ APP_NAME=Khawar
 APP_ENV=local
 APP_KEY=base64:MdOVG0TMhEK4v9XpODBsIuLWk0xrLLG8u0Vol45UaEM=
 APP_DEBUG=true
-APP_URL=https//localhost/portfolio/
+APP_URL=https://khawarr.com
 APP_PROTOCOLESS_URL=khawarr.com
 APP_URL_WITH_TENANT=https://khawarr.com/profile/
-APP_PROTOCOL=http://
+APP_PROTOCOL=https://
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
