--- a/script/.env
+++ b/script/.env
@@ -1,5 +1,5 @@
 APP_NAME=Khawar
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:MdOVG0TMhEK4v9XpODBsIuLWk0xrLLG8u0Vol45UaEM=
 APP_DEBUG=true
 APP_URL=https://khawarr.com
