--- a/.htaccess
+++ b/.htaccess
@@ -22,7 +22,7 @@
 Options -Indexes
 
 # block files which needs to be hidden, specify .example extension of the file
-<Files ~ "\.(env|license|config.js|md|gitignore|gitattributes|lock)$">
+<Files ~ "\.(env|config.js|md|gitignore|gitattributes|lock)$">
     Order allow,deny
     Deny from all
 </Files>
