--- a/script/.env
+++ b/script/.env
@@ -10,11 +10,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=khawarr.cxr1plsbmelk.us-east-1.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=port
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=portfolio
+DB_PASSWORD=THHxio6GufW9YijEDLki
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
